# roost

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: mac-app.yml
LOOP/: BACKLOG.md  JOURNAL.md  PROTOCOL.md  UAT-FINDINGS-2026-06-07.md  repro-a1-hunt1.py  repro-a1-hunt2.py  repro-a1-hunt3.py  repro-a1-hunt4.py  repro-a1-hunt5.py  repro-a1-hunt6.py  repro-a1-hunt7.py  repro-a1-hunt8.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  stack.yml
docs/: DEPLOY.md  INTEGRATIONS.md
examples/: cpu_only.yaml  echo.yaml  gpu_intent.yaml
mac-app/: DESIGN.md  Info.plist  Package.resolved  Package.swift  README.md  build.sh  launcher.sh  panel_window.py
mac-app/scripts/: build.sh  render_shots.sh
mobile-app/: API.md  DESIGN.md  README.md  record_fixtures.py
mobile-app/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
roost/: __init__.py  blobs.py  bootstrap.py  captain.py  cli.py  config.py  matcher.py  mcp.py  panel.html  publish.py  schema.py  server.py  service.py  steward.py  triage.py  tui.py  verify.py  watcher.py  worker.py
scripts/: fleet
tests/: test_blobs.py  test_bootstrap.py  test_captain.py  test_cli.py  test_config.py  test_distilled.py  test_fixture_drift.py  test_input.py  test_matcher.py  test_mcp.py  test_notify.py  test_publish.py  test_recovery.py  test_schedules.py  test_schema.py  test_server.py  test_service.py  test_steward.py  test_steward_signal.py  test_tokens.py  test_triage.py  test_tui.py  test_up.py  test_verify.py  test_version.py  test_watcher.py  test_worker.py
(+211 files in other folders)
