[project]
name = "roost"
version = "0.1.0"
description = "Pull-based orchestrator for agent jobs across heterogeneous, non-approximate nodes"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "click>=8.1",
  "pyyaml>=6.0",
  "pydantic>=2",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
roost = "roost.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["roost"]

[tool.setuptools.package-data]
roost = ["panel.html"]
